graph/dot.js
// @generated by Peggy 3.0.2.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "strict";
  var peg$c1 = "graph";
  var peg$c2 = "digraph";
  var peg$c3 = "{";
  var peg$c4 = "}";
  var peg$c5 = ";";
  var peg$c6 = "=";
  var peg$c7 = "node";
  var peg$c8 = "edge";
  var peg$c9 = "[";
  var peg$c10 = "]";
  var peg$c11 = "->";
  var peg$c12 = "--";
  var peg$c13 = ":";
  var peg$c14 = "subgraph";
  var peg$c15 = "ne";
  var peg$c16 = "nw";
  var peg$c17 = "se";
  var peg$c18 = "sw";
  var peg$c19 = "-";
  var peg$c20 = ".";
  var peg$c21 = "<";
  var peg$c22 = ">";
  var peg$c23 = "\"";
  var peg$c24 = "\\";
  var peg$c25 = "\n";
  var peg$c26 = "\r\n";
  var peg$c27 = "\\\"";
  var peg$c28 = "/*";
  var peg$c29 = "*/";
  var peg$c30 = "//";
  var peg$c31 = "#";

  var peg$r0 = /^[,;]/;
  var peg$r1 = /^[en]/;
  var peg$r2 = /^[sw]/;
  var peg$r3 = /^[$_]/;
  var peg$r4 = /^[0-9]/;
  var peg$r5 = /^[<>]/;
  var peg$r6 = /^[\n\r"\u2028-\u2029]/;
  var peg$r7 = /^[\n\r\u2028\u2029]/;
  var peg$r8 = /^[\r\u2028-\u2029]/;
  var peg$r9 = /^[^"\\\0-\x1F\x7F]/;
  var peg$r10 = /^[\n]/;
  var peg$r11 = /^[\n\r]/;
  var peg$r12 = /^[ \t]/;
  var peg$r13 = /^[\0-\uD7FF\uE000-\uFFFF]/;
  var peg$r14 = /^[\uD800-\uDBFF]/;
  var peg$r15 = /^[\uDC00-\uDFFF]/;
  var peg$r16 = /^[\uD800-\uDFFF]/;

  var peg$e0 = peg$literalExpectation("strict", true);
  var peg$e1 = peg$literalExpectation("graph", true);
  var peg$e2 = peg$literalExpectation("digraph", true);
  var peg$e3 = peg$literalExpectation("{", false);
  var peg$e4 = peg$literalExpectation("}", false);
  var peg$e5 = peg$literalExpectation(";", false);
  var peg$e6 = peg$literalExpectation("=", false);
  var peg$e7 = peg$literalExpectation("node", true);
  var peg$e8 = peg$literalExpectation("edge", true);
  var peg$e9 = peg$literalExpectation("[", false);
  var peg$e10 = peg$literalExpectation("]", false);
  var peg$e11 = peg$classExpectation([",", ";"], false, false);
  var peg$e12 = peg$literalExpectation("->", false);
  var peg$e13 = peg$literalExpectation("--", false);
  var peg$e14 = peg$otherExpectation("port");
  var peg$e15 = peg$literalExpectation(":", false);
  var peg$e16 = peg$literalExpectation("subgraph", true);
  var peg$e17 = peg$literalExpectation("ne", false);
  var peg$e18 = peg$literalExpectation("nw", false);
  var peg$e19 = peg$classExpectation(["e", "n"], false, false);
  var peg$e20 = peg$literalExpectation("se", false);
  var peg$e21 = peg$literalExpectation("sw", false);
  var peg$e22 = peg$classExpectation(["s", "w"], false, false);
  var peg$e23 = peg$otherExpectation("UNICODE_STRING");
  var peg$e24 = peg$classExpectation(["$", "_"], false, false);
  var peg$e25 = peg$otherExpectation("NUMBER");
  var peg$e26 = peg$literalExpectation("-", false);
  var peg$e27 = peg$literalExpectation(".", false);
  var peg$e28 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e29 = peg$literalExpectation("<", false);
  var peg$e30 = peg$literalExpectation(">", false);
  var peg$e31 = peg$classExpectation(["<", ">"], false, false);
  var peg$e32 = peg$literalExpectation("\"", false);
  var peg$e33 = peg$classExpectation(["\n", "\r", "\"", ["\u2028", "\u2029"]], false, false);
  var peg$e34 = peg$literalExpectation("\\", false);
  var peg$e35 = peg$anyExpectation();
  var peg$e36 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false);
  var peg$e37 = peg$otherExpectation("end of line");
  var peg$e38 = peg$literalExpectation("\n", false);
  var peg$e39 = peg$literalExpectation("\r\n", false);
  var peg$e40 = peg$classExpectation(["\r", ["\u2028", "\u2029"]], false, false);
  var peg$e41 = peg$classExpectation(["\"", "\\", ["\0", "\x1F"], "\x7F"], true, false);
  var peg$e42 = peg$literalExpectation("\\\"", false);
  var peg$e43 = peg$otherExpectation("COMMENT");
  var peg$e44 = peg$otherExpectation("BLOCK_COMMENT");
  var peg$e45 = peg$literalExpectation("/*", false);
  var peg$e46 = peg$literalExpectation("*/", false);
  var peg$e47 = peg$otherExpectation("C_COMMENT");
  var peg$e48 = peg$literalExpectation("//", false);
  var peg$e49 = peg$classExpectation(["\n"], false, false);
  var peg$e50 = peg$otherExpectation("MACRO_COMMENT");
  var peg$e51 = peg$literalExpectation("#", false);
  var peg$e52 = peg$otherExpectation("WHITESPACE");
  var peg$e53 = peg$classExpectation(["\n", "\r"], false, false);
  var peg$e54 = peg$classExpectation([" ", "\t"], false, false);
  var peg$e55 = peg$otherExpectation("Letter, Lowercase");
  var peg$e56 = peg$otherExpectation("Letter, Modifier");
  var peg$e57 = peg$otherExpectation("Letter, Other");
  var peg$e58 = peg$otherExpectation("Letter, Titlecase");
  var peg$e59 = peg$otherExpectation("Letter, Uppercase");
  var peg$e60 = peg$otherExpectation("Number, Letter");
  var peg$e61 = peg$otherExpectation("Number, Decimal Digit");
  var peg$e62 = peg$classExpectation([["\0", "\uD7FF"], ["\uE000", "\uFFFF"]], false, false);
  var peg$e63 = peg$classExpectation([["\uD800", "\uDBFF"]], false, false);
  var peg$e64 = peg$classExpectation([["\uDC00", "\uDFFF"]], false, false);
  var peg$e65 = peg$classExpectation([["\uD800", "\uDFFF"]], false, false);

  var peg$f0 = function(strict, type, id, children) {
      const ret = {
        type: type.toLowerCase(),
        strict: Boolean(strict),
        children: children ?? [],
      };
      if (id) { ret.id = id }
      return ret;
    };
  var peg$f1 = function(left, right) {
    return {
      type:'attr_stmt',
      target: 'graph',
      attrList:[{
        type: 'attr',
        id: left,
        eq: right
      }]
    };
  };
  var peg$f2 = function(target, attrList) {
     return {
       type:'attr_stmt',
       target,
       attrList,
     };
  };
  var peg$f3 = function(list, rest) {
    return [...(list ?? []), ...(rest ?? [])];
  };
  var peg$f4 = function(id, eq) {
  return {
    type:'attr',
    id,
    eq,
  }
};
  var peg$f5 = function(id, rhs, attr) {
    const edgeList = [id, ...rhs.map((v) => v.id)];

    return {
      type: 'edge_stmt',
      edgeList,
      attrList: attr ?? []
    };
  };
  var peg$f6 = function(edgeop, id) {
    return {
      type:'edgeRHS',
      edgeop:edgeop,
      id
    }
  };
  var peg$f7 = function(id, attr) {
    return {
      type: 'node_stmt',
      id,
      attrList:attr ?? []
    };
  };
  var peg$f8 = function(id, port) {
    return port ? { type:'node_id', id, port } : { type:'node_id', id };
  };
  var peg$f9 = function(id, pt) {
    return {
      type:'port',
      id:id,
      compassPt:pt ?? null
    };
  };
  var peg$f10 = function(pt) {
    return {
      type:'port',
      compassPt:pt ?? null
    }
  };
  var peg$f11 = function(id) {
        return id ? {
          type:'subgraph', id:id
        } : {
          type:'subgraph'
        }
      };
  var peg$f12 = function(g, s) {
        g = g ?? {
          type:'subgraph'
        };
        g.children = s ?? [];
        return g;
      };
  var peg$f13 = function(first, rest) {
      return first + rest.join('');
    };
  var peg$f14 = function(first, rest) {
    return first + rest;
  };
  var peg$f15 = function(n) {
       return parseFloat(text());
    };
  var peg$f16 = function(v) {
      return {
        type: 'id',
        value: v.slice(1,v.length-1),
        html: true
      };
    };
  var peg$f17 = function(v) {
      return '<' + v.join('') + '>';
    };
  var peg$f18 = function(v) { return v; };
  var peg$f19 = function(v) { return v.join(""); };
  var peg$f20 = function(chars) { return chars.join(""); };
  var peg$f21 = function() { return text(); };
  var peg$f22 = function(v) { return v[1] === '"' ? '"' : v[0] + v[1]; };
  var peg$f23 = function() { return ""; };
  var peg$f24 = function(chars) { return chars.join(""); };
  var peg$f25 = function() { return '"'; };
  var peg$f26 = function() { return ""; };
  var peg$f27 = function() { return '\\'; };
  var peg$f28 = function(v) {return v;};
  var peg$f29 = function(v) { return v.join('') };
  var peg$f30 = function(v) { return v; };
  var peg$f31 = function(v) { return v.join(''); };
  var peg$f32 = function(v) { return v; };
  var peg$f33 = function(v) { return v.join(''); };
  var peg$f34 = function(c) { return /\p{Ll}/u.test(c) };
  var peg$f35 = function(c) { return /\p{Lm}/u.test(c) };
  var peg$f36 = function(c) { return /\p{Lo}/u.test(c) };
  var peg$f37 = function(c) { return /\p{Lt}/u.test(c) };
  var peg$f38 = function(c) { return /\p{Lu}/u.test(c) };
  var peg$f39 = function(c) { return /\p{Nl}/u.test(c) };
  var peg$f40 = function(c) { return /\p{Nd}/u.test(c) };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = [];
    s1 = peg$parsegraph();
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parsegraph();
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsegraph() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = input.substr(peg$currPos, 6);
    if (s2.toLowerCase() === peg$c0) {
      peg$currPos += 6;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parse_();
    s4 = input.substr(peg$currPos, 5);
    if (s4.toLowerCase() === peg$c1) {
      peg$currPos += 5;
    } else {
      s4 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s4 === peg$FAILED) {
      s4 = input.substr(peg$currPos, 7);
      if (s4.toLowerCase() === peg$c2) {
        peg$currPos += 7;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
    }
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s6 = peg$parseID();
      if (s6 === peg$FAILED) {
        s6 = null;
      }
      s7 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 123) {
        s8 = peg$c3;
        peg$currPos++;
      } else {
        s8 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s8 !== peg$FAILED) {
        s9 = peg$parsestmt_list();
        if (s9 === peg$FAILED) {
          s9 = null;
        }
        s10 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 125) {
          s11 = peg$c4;
          peg$currPos++;
        } else {
          s11 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        if (s11 !== peg$FAILED) {
          s12 = peg$parse_();
          peg$savedPos = s0;
          s0 = peg$f0(s2, s4, s6, s9);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestmt_list() {
    var s0, s1, s2, s3, s4, s5;

    s0 = [];
    s1 = peg$currPos;
    s2 = peg$parse_();
    s3 = peg$parsestmt();
    if (s3 !== peg$FAILED) {
      s4 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 59) {
        s5 = peg$c5;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s5 === peg$FAILED) {
        s5 = null;
      }
      s1 = s3;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$currPos;
        s2 = peg$parse_();
        s3 = peg$parsestmt();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 59) {
            s5 = peg$c5;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e5); }
          }
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          s1 = s3;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestmt() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseID();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 61) {
        s3 = peg$c6;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseID();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s1, s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseattr_stmt();
      if (s0 === peg$FAILED) {
        s0 = peg$parseedge_stmt();
        if (s0 === peg$FAILED) {
          s0 = peg$parsesubgraph();
          if (s0 === peg$FAILED) {
            s0 = peg$parsenode_stmt();
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseID();
              if (s1 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 61) {
                  s2 = peg$c6;
                  peg$currPos++;
                } else {
                  s2 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e6); }
                }
                if (s2 !== peg$FAILED) {
                  s3 = peg$parseID();
                  if (s3 !== peg$FAILED) {
                    s1 = [s1, s2, s3];
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseattr_stmt() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 5);
    if (s1.toLowerCase() === peg$c1) {
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 === peg$FAILED) {
      s1 = input.substr(peg$currPos, 4);
      if (s1.toLowerCase() === peg$c7) {
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s1 === peg$FAILED) {
        s1 = input.substr(peg$currPos, 4);
        if (s1.toLowerCase() === peg$c8) {
          peg$currPos += 4;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e8); }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseattrList();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseattrList() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
